--- a/pos_app/templates/pos_app/customers.html
+++ b/pos_app/templates/pos_app/customers.html
@@ -37,24 +37,24 @@
     <div class="card">
         <div class="card-body p-0">
             <div class="table-responsive">
-                <table class="table table-hover mb-0">
-                    <thead>
+                <table class="table table-hover mb-0 customers-table">
+                    <thead class="table-dark">
                         <tr>
-                            <th scope="col">First Name</th>
-                            <th scope="col">Last Name</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Phone</th>
-                            <th scope="col">Actions</th>
+                            <th scope="col"><i class="fas fa-user me-1"></i>First Name</th>
+                            <th scope="col"><i class="fas fa-user me-1"></i>Last Name</th>
+                            <th scope="col" class="d-mobile-none"><i class="fas fa-envelope me-1"></i>Email</th>
+                            <th scope="col"><i class="fas fa-phone me-1"></i>Phone</th>
+                            <th scope="col" class="text-center"><i class="fas fa-cogs me-1"></i>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for customer in customers %}
                             <tr>
-                                <td>{{ customer.first_name }}</td>
-                                <td>{{ customer.last_name }}</td>
-                                <td>{{ customer.email|default:"-" }}</td>
-                                <td>{{ customer.phone|default:"-" }}</td>
-                                <td>
+                                <td data-label="First Name">{{ customer.first_name }}</td>
+                                <td data-label="Last Name">{{ customer.last_name }}</td>
+                                <td data-label="Email" class="d-mobile-none">{{ customer.email|default:"-" }}</td>
+                                <td data-label="Phone">{{ customer.phone|default:"-" }}</td>
+                                <td data-label="Actions" class="text-center">
                                     <div class="dropdown">
                                         <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
                                             Actions
