--- a/pos_app/templates/pos_app/products.html
+++ b/pos_app/templates/pos_app/products.html
@@ -48,17 +48,17 @@
     <div class="card">
         <div class="card-body p-0">
             <div class="table-responsive">
-                <table class="table table-hover mb-0">
-                    <thead>
+                <table class="table table-hover mb-0 products-table">
+                    <thead class="table-dark">
                         <tr>
-                            <th scope="col">Product</th>
-                            <th scope="col">SKU/Barcode</th>
-                            <th scope="col">Category</th>
-                            <th scope="col">VAT</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Stock</th>
-                            <th scope="col">Status</th>
-                            <th scope="col">Actions</th>
+                            <th scope="col"><i class="fas fa-box me-1"></i>Product</th>
+                            <th scope="col"><i class="fas fa-barcode me-1"></i>SKU/Barcode</th>
+                            <th scope="col" class="d-mobile-none"><i class="fas fa-tags me-1"></i>Category</th>
+                            <th scope="col" class="d-mobile-none"><i class="fas fa-percent me-1"></i>VAT</th>
+                            <th scope="col"><i class="fas fa-dollar-sign me-1"></i>Price</th>
+                            <th scope="col"><i class="fas fa-warehouse me-1"></i>Stock</th>
+                            <th scope="col"><i class="fas fa-toggle-on me-1"></i>Status</th>
+                            <th scope="col" class="text-center"><i class="fas fa-cogs me-1"></i>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
